--- a/app/www/index.html
+++ b/app/www/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- Preloads -->
+    <link rel="preload" href="icons/twitch.png" as="image" />
+    <link rel="preload" href="icons/youtube.png" as="image" />
+
+    <title>Mr Chat</title>
   </head>
   <body>
     <div id="root"></div>
